added error docs
